@@ -1,6 +1,13 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:
 
+2013-12-11 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Add cloudi_service_http_cowboy:close/1 for forcing a cowboy
+      connection to close
+    * Have cloudi_service_http_cowboy always add the peer ip address to the
+      RequestInfo with the key <<"peer">>
+
 2013-12-06 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Change the cloudi_service_map_reduce:cloudi_service_map_reduce_new/3
